[package]
name = "circ_buffer"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A bare-metal fixed-size statically allocated ring-buffer with optional serde (De)-Serialization."
repository = "https://github.com/jonaspleyer/circ_buffer"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg" ]

[dependencies]
serde = { version = "1.0.204", optional = true }

[dev-dependencies]
serde = { version = "1.0.204", features = [ "derive" ] }
serde_json = "1.0.120"

[features]
serde = [ "dep:serde" ]
